<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    tools:context=".ui.task.AddUpdateTaskFragment">

    <EditText
        android:id="@+id/edit_text_title_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:autofillHints="@string/title" />
    <EditText
        android:id="@+id/edit_text_description_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:autofillHints="@string/description" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_category"
        />
<!--    <Spinner-->
<!--        android:id="@+id/spinner"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dropdown"-->
<!--        android:textColor="#FF0000"-->
<!--        />-->

    <RadioGroup
        android:id="@+id/radio_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_priority" />
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_priority" />


    </RadioGroup>

    <Button
        android:id="@+id/button_cancel_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/cancel" />

</LinearLayout>