<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.NewItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_to_be_done"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/tvNewTask"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/etNewTask"
            android:layout_below="@+id/tvNewTask"
            android:layout_alignParentStart="true"
            android:textColorHint="#B8BFC2"
            android:hint="@string/enter_task_here"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Description"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/etNewTask"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/tvDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/etDisplayDescription"
            android:layout_below="@+id/tvDescription"
            android:layout_alignParentStart="true"
            android:textColorHint="#B8BFC2"
            android:hint="Enter Task Description Here.."
            android:layout_alignParentLeft="true" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/due_date"
            android:textSize="20sp"
            android:id="@+id/tvDate"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/etDisplayDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etDisplayDate"
            android:layout_toStartOf="@+id/imgDate"
            android:hint="@string/date_not_set"
            android:textColorHint="#B8BFC2"
            android:onClick="onDateSet"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="8sp"
            android:layout_below="@+id/tvDate"
            android:layout_alignParentStart="true"
            tools:ignore="TextFields"
            android:layout_toLeftOf="@+id/imgDate"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_date_range"
            android:id="@+id/imgDate"

            android:layout_below="@+id/tvDate"
            android:layout_toStartOf="@+id/imgDateClear"
            android:contentDescription="@string/click_to_set_date"
            android:layout_toLeftOf="@+id/imgDateClear" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_cancel"
            android:layout_marginStart="10dp"

            android:id="@+id/imgDateClear"
            android:layout_below="@+id/tvDate"
            android:layout_alignParentEnd="true"
            android:onClick="clearDate"
            android:contentDescription="@string/cancel_date"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/enter_priority"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:id="@+id/tvPriority"
            android:layout_below="@+id/imgDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <RadioGroup
            android:id="@+id/radio_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tvPriority"
            >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_priority" />
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_priority" />
        </RadioGroup>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@+id/radio_priority"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/click_to_cancel"
            android:elevation="15dp"
            android:text="@string/cancel_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationZ="15dp" />

    </RelativeLayout>
</ScrollView>