<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/categories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_add_category"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_task"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_container_task"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_task" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layoutManager='androidx.recyclerview.widget.LinearLayoutManager'
            android:nestedScrollingEnabled="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id='@+id/fabBtn'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:src="@drawable/ic_baseline_add"
        android:layout_alignParentRight="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/add_update_fragment"
        android:background="@color/white"
        android:id="@+id/fragment_container"
        />
    </RelativeLayout>
